@@ -3,3 +3,6 @@ ggplot2 0.8.7 (2010-XX-XX) ----------------------------------------
 * Fixed bug in stat_density2d when contour = FALSE (Thanks to takahashi kohske) 
 * geom_point legend takes more care to ensure that fill colours will be shown
 * legend: fixed scale merging bug when labels were set manually
+* stat_bin: deals with floating point rounding issues using the same algorithm as base::hist
+* fullseq: now always returns vector of length two, even when range is 0
+* stat_bin2d: fix typo in breaks calculation
